--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Kodluyoruz-Google</title>
 </head>
+
 <body>
     <!-- nav bar -->
     <nav>
@@ -22,13 +24,60 @@
         </div>
     </nav>
     <!-- /nav bar -->
-    
+
     <!-- main section -->
     <section class="container">
-        <img src="./assets/logo.png" alt=""/>
+        <div class="logo">
+            <img src="./assets/logo.png" alt="" />
+        </div>
+        <div class="search-area">
+            <div class="search">
+                <div class="search-img">
+                    <span>
+                        <svg height="20" width="20" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24">
+                            <path
+                                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+                            </path>
+                        </svg>
+                    </span>
+                </div>
+                <div class="input-enter">
+                    <div class="input-area">
+                        <input type="text" class="input" maxlength="2048" autofocus="true" />
+                    </div>
+
+                </div>
+                <div class="ses">
+                    <img src="./assets/voicelogo.png" alt="">
+
+                </div>
+            </div>
+        </div>
+
+
+        <div class="tool-btn">
+            <button class="btn-item">Google Search</button>
+            <button class="btn-item">I'm Feeling Lucky</button>
+        </div>
     </section>
     <!-- /main section -->
 
 
+    <footer>
+        <div class="left">
+            <a title="" href="#" class="item">Advertising</a>
+            <a title="" href="#" class="item">Businnes</a>
+            <a title="" href="#" class="item">How Search work</a>
+        </div>
+        <div class="right">
+            <a title="" href="#" class="item">Privacy</a>
+        <a title="" href="#" class="item">Terms</a>
+        <a title="" href="#" class="item">Settings</a>
+        </div>
+        
+    </footer>
+
 </body>
+
 </html>
